--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.llamas.retobrounie">
 
+    <uses-feature android:name="android.hardware.camera2" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
@@ -24,8 +27,12 @@
         <activity
             android:name=".Inicio"
             android:screenOrientation="portrait" />
-        <activity android:name=".Ciudades" />
-        <activity android:name=".Perfil"></activity>
+        <activity
+            android:name=".Ciudades"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Perfil"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
